fix top layout problems

--- a/src/cmn-style/index.global.scss
+++ b/src/cmn-style/index.global.scss
@@ -87,8 +87,6 @@ button {
 // ============ CUTOMIZATION ===========
 
 html, body, #root, #root > [data-reactroot] {
-  width: 100%;
-  height: 100%;
   // Make the default font ugly so we immediately see when something
   // is not yet defined correctly in our UI
   font-family: var(--default-font), serif;
