--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -1,15 +1,16 @@
 .component {
-  height: 100vh;
+  // height: 100vh;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
   // background-color: pink; // TODO: Delete, its just for initial test
 
   .contentInCenter {
-    display: inline-block;
+    display: block;
+    text-align: center;
   }
 
   .webAuthnTopGap {
-    margin-top: var(--margin-layout-top-webauthn);
+    height: var(--webauthn-layout-top-gap);
+    visibility: hidden;
   }
 }
